--- a/style.css
+++ b/style.css
@@ -12,6 +12,59 @@
 }
 
 body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+  display: grid;
+  place-items: center;
+  padding-top: 4rem;
+
   background-color: var(--background);
   color: var(--on-background);
+}
+
+form {
+  display: flex;
+  gap: 0.5rem;
+}
+
+input[type="search"] {
+  padding-left: 1rem;
+  height: 3.5rem;
+  border: none;
+
+  background-color: var(--surface);
+  border-radius: 0.75rem;
+  outline: 1px solid var(--outline);
+
+  color: var(--text);
+  font-size: 1.5rem;
+
+  transition: outline 150ms;
+}
+input[type="search"]:focus {
+  outline-color: var(--primary);
+  outline-width: 2px;
+}
+input[type="search"]::placeholder {
+  opacity: 0.8;
+}
+
+button {
+  padding: 0.5rem 4rem;
+  border: none;
+
+  background-color: var(--primary);
+  color: var(--on-primary);
+  border-radius: 9999px;
+
+  font-weight: 500;
+
+  transition: filter 150ms, transform 100ms;
+}
+button:hover {
+  filter: brightness(1.1);
+}
+button:active {
+  transform: scale(0.95);
 }
