--- a/style.css
+++ b/style.css
@@ -108,11 +108,11 @@ output {
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(4, auto);
   grid-auto-flow: column;
+  gap: 0.5rem;
 }
 
 .location {
   grid-column: 1 / -1;
-  margin-bottom: 0.5rem;
 }
 
 .condition-icon {
